--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <img src="https://cdn2.iconfinder.com/data/icons/love-and-wedding-4/48/182-512.png" alt="sri indu" height="250" width="350">
   <link rel="icon" href="https://i.pinimg.com/originals/b7/8c/07/b78c0761079b7e7d70d04032c4bdb2a5.png">
  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
-<link rel="stylesheet" href="C:\Users\user\Desktop\js\style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
